# node-api-cts

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  eslint.config.js  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: lint.yml  test.yml
implementors/node/: assert.js  load-addon.js  run-tests.ts  tests.ts  ts-loader.js  ts-strip.js  win_delay_load_hook.cc
tests/harness/: assert.js  load-addon.js
tests/js-native-api/: entry_point.h
tests/js-native-api/2_function_arguments/: CMakeLists.txt  test.js
tests/js-native-api/3_callbacks/: CMakeLists.txt  test.js
tests/js-native-api/4_object_factory/: CMakeLists.txt  test.js
tools/: shallow-checkout-nodejs.ts  strip.js  tsconfig.json
